<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_select_friends"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ike.taxi.chat.activity.SelectFriendsActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blue2">
        <TextView
            android:id="@+id/tv_back"
            android:drawableLeft="@mipmap/de_title_back"
            android:layout_centerVertical="true"
            style="@style/text_style"
            android:text="@string/select_contacts"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            style="@style/text_style"
            android:text="@string/confirm"/>
    </RelativeLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/font_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_friend"
            android:layout_gravity="center"
            android:visibility="gone"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_select_friend">
        </android.support.v7.widget.RecyclerView>
        <com.ike.taxi.chat.server.SideBar
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:id="@+id/dis_sidebar"
            android:layout_gravity="center|right"/>
    </FrameLayout>


</LinearLayout>
