<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp">
    <!--评论item-->
    <ImageView
        android:layout_margin="10dp"
        android:src="@mipmap/girl"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/iv_head"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="@dimen/city_size_size"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_user"
        android:id="@+id/tv_comment_user"
        android:layout_alignTop="@+id/iv_head"
        android:layout_toRightOf="@+id/iv_head"
        android:layout_toEndOf="@+id/iv_head" />

    <TextView
        android:textSize="@dimen/city_size_size"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_time"
        android:id="@+id/tv_comment_time"
        android:layout_alignBottom="@+id/iv_head"
        android:layout_toRightOf="@+id/iv_head"
        android:layout_toEndOf="@+id/iv_head" />

    <TextView
        android:textColor="@color/ccc"
        android:lines="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_content"
        android:id="@+id/tv_comment_content"
        android:layout_below="@+id/iv_head"
        android:layout_alignLeft="@+id/tv_comment_time"
        android:layout_alignStart="@+id/tv_comment_time" />
    <View
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toRightOf="@+id/iv_head"
        android:layout_toEndOf="@+id/iv_head"
        android:layout_below="@+id/tv_comment_content"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey"/>
</RelativeLayout>