<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_friend_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ike.taxi.chat.activity.FriendDetailsActivity">
    <RelativeLayout
        android:background="@color/blue2"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="详细信息"
            android:textColor="@color/white"
            android:textSize="@dimen/font_36"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_marginRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/more"/>
    </RelativeLayout>
    <RelativeLayout
        android:background="@color/blue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.ike.taxi.widget.CircleImageView
            android:id="@+id/civ_user_head"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/taxi"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/tv_username"
            android:textColor="@color/white"
            android:layout_below="@+id/civ_user_head"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        <TextView
            android:id="@+id/tv_occupation"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/occupation"
            android:textColor="@color/white"
            android:layout_below="@+id/tv_username"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:background="@color/blue3"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_call"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/phone"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call"/>
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <LinearLayout
            android:id="@+id/ll_send_sms"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/send_sms"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_sms" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/white"/>
        <LinearLayout
            android:id="@+id/ll_send_email"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <ImageView
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/email"/>
            <TextView
                android:layout_marginBottom="5dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_email" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/textView1"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:text="18812345678"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/tv_telephone" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/textView3"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:layout_gravity="center_vertical"
            android:text="18812345678@163.com"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/tv_email" />
    </LinearLayout>

    <!--<View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_gravity="center_vertical"
            android:id="@+id/textView5"
            android:layout_marginLeft="20dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:layout_gravity="center_vertical"
            android:text="18812345678@163.com"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" />
    </LinearLayout>-->
    <Button
        android:id="@+id/btn_send_message"
        android:textSize="@dimen/font_36"
        android:textColor="@color/white"
        android:text="@string/send_meaage"
        android:layout_margin="20dp"
        android:background="@color/blue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
