<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ike.taxi.fragment.FirstFragment">
    <!--第一个fragment-->
    <RelativeLayout
        android:id="@+id/rl_first"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/btn_share_position"
            android:text="@string/share_position" />

        <Button
            android:text="叫车"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_call_head" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <!--地图-->
    <RelativeLayout
        android:layout_below="@+id/rl_first"
        android:layout_above="@+id/bottom_layout"
        android:id="@+id/rl_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
        </com.amap.api.maps.MapView>
        <EditText
            android:enabled="false"
            android:id="@+id/et_start"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/et_first"
            android:layout_above="@+id/et_end"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/et_end"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_above="@+id/et_number"
            android:background="@drawable/et_first"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <EditText
            android:id="@+id/et_number"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/et_first"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_marginRight="30dp"
            android:id="@+id/btn_call"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:background="@color/white"
            android:text="@string/route"
            android:layout_alignTop="@+id/et_start"
            android:layout_toRightOf="@+id/et_start"
            android:layout_toEndOf="@+id/et_start" />

        <Button
            android:background="@color/white"
            android:text="@string/call_car"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:id="@+id/btn_call_car"
            android:layout_below="@+id/et_start"
            android:layout_toRightOf="@+id/et_start"
            android:layout_toEndOf="@+id/et_start" />
    </RelativeLayout>
    <!--一键叫车-->
    <!--<LinearLayout-->
        <!--android:id="@+id/head_layout"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="120dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:padding="5dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:visibility="gone"-->
        <!--android:orientation="vertical">-->
        <!--<EditText-->
            <!--android:id="@+id/et_call_start"-->
            <!--android:text="起点"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp" />-->
        <!--<EditText-->
            <!--android:id="@+id/et_call_end"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp"-->
            <!--android:text="终点"/>-->
        <!--<EditText-->
            <!--android:id="@+id/et_number"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="200dp" />-->
        <!--<Button-->
            <!--android:id="@+id/btn_call_car"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->


    <!--</LinearLayout>-->
    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:padding="5dp"
        android:gravity="center_vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/firstline"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="12dp"
            android:singleLine="true"
            android:textColor="#333333"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/secondline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/firstline"
            android:layout_marginLeft="12dp"
            android:gravity="right"
            android:singleLine="true"
            android:textColor="#999999"
            android:textSize="13sp"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="详情"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <Button
                android:layout_width="7dp"
                android:layout_height="13dp"
                android:layout_marginLeft="4dp"
                android:background="@mipmap/nav_btn_back_light_normal"
                android:gravity="center_vertical" />
        </LinearLayout>
        <View
            android:layout_marginTop="2dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/view"
            android:layout_below="@+id/secondline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"/>
        <Button
            android:textSize="@dimen/font_32"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/f850_default_blue"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/btn_navi"
            android:layout_below="@+id/view"
            android:text="@string/navi"/>
    </RelativeLayout>
</RelativeLayout>
